--- a/index.html
+++ b/index.html
@@ -4,19 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord homepage</title>
 
-        <!--  Font Whitney via cdn -->
-        <link rel="stylesheet" href="http://fonts-cdnfonts.com/css/whitney-2">
+    <!--  Font Whitney via cdn -->
+    <link rel="stylesheet" href="http://fonts-cdnfonts.com/css/whitney-2">
 
-        <!-- Font-Awesome cdn -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="css/style.css">
+    <!-- Font-Awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
-        
+        <div class="container clearfix">
+            <div class="logo float-left">
+                <img src="img/logo.svg" alt="Discord logo">
+            </div>
+
+            <div class="main-nav float-left">
+                <nav>
+                    <ul>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perché Discord</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="login float-left">
+                <button class="white-button">Accedi</button>
+            </div>
+        </div>
+
+        <img src="img/jumbo.png" alt="jummotron image">
+
     </header>
     
 </body>
