--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
             </div>
         </div>
 
-        <img src="img/jumbo.png" alt="jummotron image">
+        <div class="jumbotron clearfix>
 
+            <div class="container float-left">
+                
+            </div>
+        </div>
     </header>
     
 </body>
