--- a/index.html
+++ b/index.html
@@ -34,14 +34,25 @@
             </div>
 
             <div class="login float-left">
-                <button class="white-button">Accedi</button>
+                <button class=" button white-button">Accedi</button>
             </div>
         </div>
 
-        <div class="jumbotron clearfix>
+        <div class="jumbotron relative">
 
-            <div class="container float-left">
-                
+            <div class="container absolute">
+
+                <h1>
+                    Il tuo posto per parlare
+                </h1>
+
+                <p>
+                    Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                </p>
+                <div>
+                    <button class="button white-button">Scarica per Mac</button>
+                    <button class="button black-button">Apri Discord nel tuo browser</button>
+                </div>
             </div>
         </div>
     </header>
