completamento jumbotron e prima sezione

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
 </head>
 <body>
 
+    <!-- Header -->
     <header>
+
+        <!-- Contenitore per logo, menu e bottone -->
         <div class="container clearfix">
+
+            <!-- Div logo -->
             <div class="logo float-left">
                 <img src="img/logo.svg" alt="Discord logo">
             </div>
 
+            <!-- Div menu navigazione -->
             <div class="main-nav float-left">
                 <nav>
                     <ul>
@@ -33,13 +39,17 @@
                 </nav>
             </div>
 
+            <!-- Div tasto login -->
             <div class="login float-left">
                 <button class=" button white-button">Accedi</button>
             </div>
         </div>
+    </header>
 
-        <div class="jumbotron relative">
+    <main>
 
+        <!-- Sezione jumbotron -->
+        <section class="jumbotron relative">
             <div class="container absolute">
 
                 <h1>
@@ -50,12 +60,27 @@
                     Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
                 <div>
-                    <button class="button white-button">Scarica per Mac</button>
-                    <button class="button black-button">Apri Discord nel tuo browser</button>
+                    <button class="button-jumbotron white-button"> <i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</button>
+                    <button class="button-jumbotron black-button">Apri Discord nel tuo browser</button>
                 </div>
             </div>
-        </div>
-    </header>
-    
+        </section>
+
+        <!-- Prima sezione -->
+        <section class="container clearfix">
+            <aside class="image float-left">
+                <img src="img/item1.svg" alt="snippet Discord">
+            </aside>
+            <aside class="article float-left">
+                <h1>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h1>
+
+                <p>
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                </p>
+            </aside>
+        </section>
+    </main>
 </body>
 </html>
