completamento seconda e terza sezione

--- a/index.html
+++ b/index.html
@@ -81,6 +81,45 @@
                 </p>
             </aside>
         </section>
+
+        <!-- Seconda sezione -->
+        <section class="container clearfix">
+
+            <aside class="article float-left">
+                <h1>
+                    Dove trovarsi è facile
+                </h1>
+
+                <p>
+                    Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                </p>
+            </aside>
+
+            <aside class="image float-left">
+                <img src="img/item2.svg" alt="snippet Discord">
+            </aside>
+        </section>
+
+        <!-- Terza sezione -->
+        <section class="container clearfix">
+
+            <aside class="image float-left">
+                <img src="img/item3.svg" alt="snippet Discord">
+            </aside>
+
+            <aside class="article float-left">
+                <h1>
+                    Da pochi a un fandom
+                </h1>
+
+                <p>
+                    Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                </p>
+            </aside>
+
+        </section>
+
+
     </main>
 </body>
 </html>
