modifiche terza sezione

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
 
         <!-- Seconda sezione -->
-        <section class="container clearfix">
+        <section class="container grey clearfix">
 
             <aside class="article float-left">
                 <h1>
